# trade_connector

./: CMakeLists.txt  logger.cpp  logger.h  main.cpp  trade_connector.kdev4  transaq_client.cpp  transaq_client.h  transaq_loader.h  transaq_loader_stub.cpp  transaq_loader_win.cpp  transaq_wrapper.cpp  transaq_wrapper.h
.kdev4/: _custom.kdev4  trade_connector.kdev4
vcproj/: .gitignore  trade_connector.sln
vcproj/trade_connector/: trade_connector.vcxproj  trade_connector.vcxproj.filters
